--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "browser-image-compression": "^2.0.2",
     "firebase": "^12.7.0",
     "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.562.0",
