--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tiptap/react": "^3.18.0",
     "@tiptap/starter-kit": "^3.18.0",
     "browser-image-compression": "^2.0.2",
+    "canvas-confetti": "^1.9.4",
     "firebase": "^12.8.0",
     "firebase-admin": "^13.6.0",
     "html2pdf.js": "^0.12.1",
